@@ -356,12 +356,18 @@ SENSORS = {#  PID               Name                            formula         
                    (_("O2 Sensor: 1 - 1 Fuel Trim"),         lambda_fuel_percent,    "%",        "%"         )),
             "15": ((_("O2 Sensor: 1 - 2 Voltage"),           lambda_voltage,         "V",        "V"         ),
                    (_("O2 Sensor: 1 - 2 Fuel Trim"),         lambda_fuel_percent,    "%",        "%"         )),
-            "16": ((_("O2 Sensor: 1 - 3"),                   lambda_fuel_percent,    "%",        "%"         ),),
-            "17": ((_("O2 Sensor: 1 - 4"),                   lambda_fuel_percent,    "%",        "%"         ),),
-            "18": ((_("O2 Sensor: 2 - 1"),                   lambda_fuel_percent,    "%",        "%"         ),),
-            "19": ((_("O2 Sensor: 2 - 2"),                   lambda_fuel_percent,    "%",        "%"         ),),
-            "1A": ((_("O2 Sensor: 2 - 3"),                   lambda_fuel_percent,    "%",        "%"         ),),
-            "1B": ((_("O2 Sensor: 2 - 4"),                   lambda_fuel_percent,    "%",        "%"         ),),
+            "16": ((_("O2 Sensor: 1 - 3 Voltage"),           lambda_voltage,         "V",        "V"         ),
+                   (_("O2 Sensor: 1 - 3 Fuel Trim"),         lambda_fuel_percent,    "%",        "%"         )),
+            "17": ((_("O2 Sensor: 1 - 4 Voltage"),           lambda_voltage,         "V",        "V"         ),
+                   (_("O2 Sensor: 1 - 4 Fuel Trim"),         lambda_fuel_percent,    "%",        "%"         )),
+            "18": ((_("O2 Sensor: 2 - 1 Voltage"),           lambda_voltage,         "V",        "V"         ),
+                   (_("O2 Sensor: 2 - 1 Fuel Trim"),         lambda_fuel_percent,    "%",        "%"         )),
+            "19": ((_("O2 Sensor: 2 - 2 Voltage"),           lambda_voltage,         "V",        "V"         ),
+                   (_("O2 Sensor: 2 - 2 Fuel Trim"),         lambda_fuel_percent,    "%",        "%"         )),
+            "1A": ((_("O2 Sensor: 2 - 3 Voltage"),           lambda_voltage,         "V",        "V"         ),
+                   (_("O2 Sensor: 2 - 3 Fuel Trim"),         lambda_fuel_percent,    "%",        "%"         )),
+            "1B": ((_("O2 Sensor: 2 - 4 Voltage"),           lambda_voltage,         "V",        "V"         ),
+                   (_("O2 Sensor: 2 - 4 Fuel Trim"),         lambda_fuel_percent,    "%",        "%"         )),
             "1C": ((_("OBD Designation"),                    obd_designation,        "",         ""          ),),
             "1D": ((_("O2 Sensors present"),                 bitstring,              "",         ""          ),),
             "1E": ((_("Aux input status"),                   no_op,                  "",         ""          ),),
